--- a/PracticeProjectNo1/Info.plist
+++ b/PracticeProjectNo1/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Athelas-Bold</string>
+		<string>Athelas-BoldItalic</string>
+		<string>Athelas-Italic</string>
+		<string>Athelas-Regular</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
